feat: add environment to workflows

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,9 @@ jobs:
   deploy:
     name: Deploy Terraform changes in changed Terramate stacks
 
+    environment:
+      name: dev
+
     permissions:
       id-token: write
       contents: read
