--- a/.github/workflows/drift-detection.yml
+++ b/.github/workflows/drift-detection.yml
@@ -9,6 +9,9 @@ jobs:
   drift-detection:
     name: Detect and reconcile drift in Terraform stacks
 
+    environment:
+      name: dev
+
     permissions:
       id-token: write
       contents: read
