--- a/.github/workflows/drift-detection.yml
+++ b/.github/workflows/drift-detection.yml
@@ -4,6 +4,8 @@ on:
   schedule:
     # Run this workflow at the top of every hour
     - cron: '0 * * * *'
+  workflow_dispatch:
+
 
 jobs:
   drift-detection:
