feat: updating workflows

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,7 +67,7 @@ jobs:
             -C stacks \
             --parallel 1 \
             --changed \
-            terraform init
+            init
         env:
           GITHUB_TOKEN: ${{ github.token }}
           ARM_USE_OIDC: true
@@ -83,7 +83,7 @@ jobs:
             -C stacks \
             --parallel 5 \
             --changed \
-            terraform deploy
+            deploy
         env:
           GITHUB_TOKEN: ${{ github.token }}
           ARM_USE_OIDC: true
@@ -98,7 +98,7 @@ jobs:
             -C stacks \
             --parallel 5 \
             --changed \
-            terraform drift detect
+            drift detect
         env:
           GITHUB_TOKEN: ${{ github.token }}
           ARM_USE_OIDC: true
