--- a/.github/workflows/drift-detection.yml
+++ b/.github/workflows/drift-detection.yml
@@ -63,7 +63,7 @@ jobs:
           terramate script run \
             -C stacks \
             --parallel 1 \
-            terraform init
+            init
         env:
           GITHUB_TOKEN: ${{ github.token }}
           ARM_USE_OIDC: true
@@ -79,7 +79,7 @@ jobs:
             --parallel 5 \
             --continue-on-error \
             -- \
-            terraform drift detect
+            drift detect
         env:
           GITHUB_TOKEN: ${{ github.token }}
           ARM_USE_OIDC: true
@@ -93,11 +93,11 @@ jobs:
           terramate script run \
             -C stacks \
             --tags reconcile \
-            --cloud-status=drifted \
+            --status=drifted \
             --parallel 5 \
             --continue-on-error \
             -- \
-            terraform drift reconcile
+            drift reconcile
         env:
           GITHUB_TOKEN: ${{ github.token }}
           ARM_USE_OIDC: true
